tests/error/type_match/if_expr_incompatible_types.bz
// error: matching the two branches of the if expression to type 'auto' is ambiguous
// note: resulting type from matching the then branch is 'i32'
// note: resulting type from matching the else branch is 'u32'
function test(b: bool)
{
	let _ = if (b) {
		0i32
	} else {
		1u32
	};
}
